# vcf

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
ai-rules/: README.md  global-rules.md  project-rules.md
apps/: README.md
apps/hdf5-mcp/ai_docs/: h5_dataset.md  h5_groups.md  h5_objects.md  mcp_core.md  mcp_resources.md  mcp_tools.md  mcp_transport.md
apps/hdf5-mcp/mcp-h5-server/: README.md  pyproject.toml
apps/hdf5-mcp/mcp-h5-server/mcp_h5_server/: __init__.py  __main__.py  h5_utils.py  handlers.py  models.py  server.py  uri.py
apps/hdf5-mcp/mcp-h5-server/tests/: __init__.py  conftest.py  test_h5_utils.py  test_integration.py  test_uri.py
apps/hdf5-mcp/planning/: optimize.md  plan.md  request.md  spec.md
docker/: Dockerfile  docker-compose.yaml  requirements-dev.txt
prompts/: README.md  planning.md  request.md  spec.md
resources/: README.md
resources/setup-guides/: docker-setup.md
scripts/: session-prep.sh
sessions/: README.md
sessions/week-01/: README.md  session-notes.md
tools/: README.md
