[project]
name = "vcf-workspace"
version = "0.1.0"
description = "Vibe Coding Fridays - AI-Enhanced Development Workspace"
authors = [
    {name = "GRC Team", email = "team@grc.iit.edu"}
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "openai>=1.0.0",
    "anthropic>=0.7.0",
    "requests>=2.28.0",
    "httpx>=0.24.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0"
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "jupyter>=1.0.0",
    "ipython>=8.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Configure hatchling to not build a package (workspace mode)
[tool.hatch.build.targets.wheel]
bypass-selection = true
only-include = []

[tool.hatch.build.targets.sdist]
only-include = [
    "pyproject.toml",
    "README.md",
    "LICENSE"
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
