[project]
name = "mcp-h5-server"
version = "0.1.0"
description = "MCP Server for HDF5 file exploration and data retrieval"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "HDF5 MCP Server", email = "example@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "h5py>=3.0.0",
    "numpy>=1.20.0",
    "mcp>=0.1.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=6.0.0",
    "pytest-asyncio>=0.18.0",
]

[project.scripts]
mcp-h5-server = "mcp_h5_server.__main__:main"

[tool.uv]
dev-dependencies = [
    "pytest>=6.0.0",
    "pytest-asyncio>=0.18.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
]
